log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {} 
        - name: config-file              
          configMap:
            name: log-output-config       
      containers:
        - name: log-output-writer               
          image: log-output-writer  
          imagePullPolicy: IfNotPresent           
          volumeMounts:                 
            - name: shared-files
              mountPath: /usr/src/app/files     
        - name: log-output-reader                
          image: log-output-reader
          imagePullPolicy: IfNotPresent              
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
            - name: config-file           
              mountPath: /usr/src/app/config
